# BMI323-Driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml  custom_targets.json  custom_targets.json5  mbed_app.json  test_BMI323.cpp
BMI323/: BMI323.cpp  BMI323.h  CMakeLists.txt
FlashLogFR/: CmakeLists.txt  FlashLogFR.cpp  FlashLogFR.h  PinNames.h  test_FlashLogFR.cpp
SPIFBlockDevice/: CMakeLists.txt  SPIFBlockDevice.cpp  SPIFBlockDevice.h
custom_targets/: CMakeLists.txt
custom_targets/INTEGRATOR_BOARD/: system_clock.c
